PoC-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-service
  namespace: default
spec:
  selector:
    app: poc
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 80
