PoC-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-ingress
spec:
  rules:
  - host: pocinterviu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poc-service
            port:
              number: 8089
